--- a/TP3/Informe/introduccion.tex
+++ b/TP3/Informe/introduccion.tex
@@ -21,7 +21,7 @@ El encabezado es de tamaño fijo: 12 bytes. S'olo exhibe campos para representar
 
 \begin{figure}[H]
 \begin{center}
-\includegraphics[width=\textwidth,keepaspectratio]{formatosegmento.png}
+\includegraphics[width=\textwidth,keepaspectratio]{formatosegmento.PNG}
 \end{center}
 \caption{Formato del encabezado de PTC} \label{figura1}
 \end{figure}
