--- a/TP3/Informe/abstract.tex
+++ b/TP3/Informe/abstract.tex
@@ -1,6 +1,9 @@
 \section*{\centering Abstract}
 
 {\em
-
+\indent	En este trabajo se implemento el cliente de un protocolo de sliding window con goback n simplex y se analizó la eficiencia del mismo en una red local.	\\
+\indent	Nuestro proposito es comprender como afectan al desempeño del protocolo las diversas variables del protocolo mediante la experimentación y el análisis de los resultados.	\\
+\indent	Los experimentos fueron llevados a cabo en una red local wifi variando el tamaño de la ventana de emisión y el tamaño de los archivos transmitidos.	\\
+\indent	En los resultados obtenidos observamos que en principio la eficiencia del protocolo mejora a medida que se incremente el tamaño de la ventana hasta alcanzar un punto de quiebre, a partir del cual la eficiencia comienza a decrecer hasta estancarse.
 }
 
