--- a/TP3/Informe/tp3.tex
+++ b/TP3/Informe/tp3.tex
@@ -49,7 +49,7 @@
 \titulo{Tp3: conexiones}
 %\subtitulo{}
 \grupo{Grupo:}
-\integrante{Andr'es Laurito}{27/11}{andy.laurito@hotmail.com}
+%~ \integrante{Andr'es Laurito}{27/11}{andy.laurito@hotmail.com}
 \integrante{Mat\'ias Capello}{006/02}{matiascapello@gmail.com}
 \integrante{Santiago Hern'andez}{48/11}{santi-hernandez@hotmail.com}
 
